data/Java/17-reach-eof/6/[M]Error.txt
*https://www.tutorialspoint.com/java/java_object_classes.htm
Employee.java:35: error: reached end of file while parsing
   }
    ^